--- a/src/stylesheets/_app.scss
+++ b/src/stylesheets/_app.scss
@@ -1,3 +1,12 @@
-@import './characterList';
-@import './characterCard';
-@import './characterDetail';
+@import './base/reset';
+@import './base/mixins';
+@import './base/variables';
+@import './space';
+@import './components/header';
+@import './components/filterSearch';
+@import './components/characterList';
+@import './components/characterCard';
+@import './components/characterDetail';
+@import './footer';
+@import './components/noResults';
+@import './components/pageNotFound';
