--- a/src/stylesheets/components/_filterSearch.scss
+++ b/src/stylesheets/components/_filterSearch.scss
@@ -9,9 +9,11 @@
 
   @include forTablet {
     margin-top: 50px;
+    font-size: 30px;
   }
   @include forPc {
     margin-top: 60px;
+    font-size: 40px;
   }
 
   & input {
