--- a/src/stylesheets/components/_characterDetail.scss
+++ b/src/stylesheets/components/_characterDetail.scss
@@ -8,24 +8,22 @@
   background-color: #86c345;
   margin-left: auto;
   margin-right: auto;
-  margin-top:30px;
-
+  margin-top: 30px;
 
   @include forTablet {
-    width: 240px;
+    width: 280px;
   }
 
   @include forPc {
-    width: 260px;
+    width: 285px;
   }
 
-
   & img {
-    width: 220px;
+    width: 195px;
     border-radius: 20px;
 
     @include forTablet {
-      width: 240px;
+      width: 255px;
     }
 
     @include forPc {
@@ -43,25 +41,57 @@
     vertical-align: middle;
 
     @include forTablet {
-        width: 240px;
-        font-size: 20px;
-      }
-  
-      @include forPc {
-        width: 260px;
-        font-size: 22px;
-      }
+      width: 280px;
+      font-size: 24px;
+    }
+
+    @include forPc {
+      width: 260px;
+      font-size: 22px;
+    }
   }
 
   & p {
     font-size: 14px;
 
     @include forTablet {
-        font-size: 16px;
-      }
-  
-      @include forPc {
-        font-size: 18px;
-      }
+      font-size: 22px;
+    }
+
+    @include forPc {
+      font-size: 18px;
+    }
+  }
+
+  & .characterDetail-info {
+    & img {
+      width: 40px;
+      height: 40px;
+      padding: 10px;
+    }
+
+    & .characterDetail-info_status {
+      display: flex;
+      align-items: center;
+    }
+  }
+}
+
+.back-container {
+  text-align: center;
+  font-size: 20px;
+  margin-top: 10px;
+
+  @include forTablet {
+    font-size: 40px;
+  }
+
+  @include forPc {
+    font-size: 30px;
+  }
+
+  & a {
+    text-decoration: none;
+    color: black;
   }
 }
