--- a/src/stylesheets/components/_characterList.scss
+++ b/src/stylesheets/components/_characterList.scss
@@ -5,10 +5,9 @@
   grid-template-rows: 400px 400px 400px 400px 400px 400px 400px 400px 400px 400px 400px;
   list-style-type: none;
 
-
   @include forTablet {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 500px 500px 500px 500px 500px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 500px 500px 500px 500px 500px 500px 500px 500px 500px 500px;
   }
 
   @include forPc {
@@ -20,11 +19,6 @@
     font-size: 14px;
     margin-left: auto;
     margin-right: auto;
-
-    & h
-
-    & img {
-    }
 
     & a {
       text-decoration: none;
