--- a/src/stylesheets/_app.scss
+++ b/src/stylesheets/_app.scss
@@ -3,6 +3,8 @@
 @import './base/variables';
 @import './space';
 @import './components/header';
+@import './section';
+@import './main';
 @import './components/filterSearch';
 @import './components/characterList';
 @import './components/characterCard';
