--- a/src/stylesheets/_space.scss
+++ b/src/stylesheets/_space.scss
@@ -10,10 +10,10 @@
   
 .space {
     position: relative;
-    width: 100vw;
     height: 100vh;
     background: black;
-  }
+    overflow: hidden;
+ }
   
 .particle,
   .particle::after {
