--- a/src/stylesheets/components/_characterCard.scss
+++ b/src/stylesheets/components/_characterCard.scss
@@ -5,6 +5,14 @@
   border-radius: 20px;
   padding: 10px;
   background-color: #86c345;
+  font-family: $mainFont;
+  box-shadow: rgba(black, 0.66) 0 30px 60px 0, inset #333 0 0 0 5px,
+    inset rgba(white, 0.5) 0 0 0 6px;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+
+  &:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  }
 
   & img {
     width: 200px;
@@ -20,7 +28,7 @@
   }
 
   & h4 {
-    font-size: 16px;
+    font-size: 20px;
     background-color: white;
     width: 200px;
     height: 50px;
@@ -29,13 +37,13 @@
     vertical-align: middle;
 
     @include forTablet {
-      font-size: 20px;
+      font-size: 24px;
       width: 270px;
       height: 60px;
     }
 
     @include forPc {
-      font-size: 22px;
+      font-size: 24px;
       width: 240px;
       height: 60px;
     }
@@ -55,11 +63,11 @@
 
   & .characterCard-info {
     display: flex;
-    justify-content: end;
+    justify-content: left;
 
     & img {
-      width: 40px;
-      height: 40px;
+      width: 50px;
+      height: 50px;
       padding: 10px;
     }
   }
