--- a/src/stylesheets/components/_characterDetail.scss
+++ b/src/stylesheets/components/_characterDetail.scss
@@ -8,14 +8,24 @@
   background-color: #86c345;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 30px;
+  margin-top: 60px;
+  cursor: pointer;
+  box-shadow: rgba(black, 0.66) 0 30px 60px 0, inset #333 0 0 0 5px,
+    inset rgba(white, 0.5) 0 0 0 6px;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+
+  &:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  }
 
   @include forTablet {
     width: 280px;
+    margin-top: 80px;
   }
 
   @include forPc {
     width: 285px;
+    margin-top: 80px;
   }
 
   & img {
@@ -32,13 +42,14 @@
   }
 
   & h4 {
-    font-size: 16px;
+    font-size: 20px;
     background-color: white;
     width: 220px;
     height: 50px;
     text-align: center;
     display: table-cell;
     vertical-align: middle;
+    font-family: $mainFont;
 
     @include forTablet {
       width: 280px;
@@ -47,26 +58,27 @@
 
     @include forPc {
       width: 260px;
-      font-size: 22px;
+      font-size: 26px;
     }
   }
 
   & p {
-    font-size: 14px;
+    font-size: 20px;
+    font-family: $mainFont;
 
     @include forTablet {
-      font-size: 22px;
+      font-size: 26px;
     }
 
     @include forPc {
-      font-size: 18px;
+      font-size: 28px;
     }
   }
 
   & .characterDetail-info {
     & img {
-      width: 40px;
-      height: 40px;
+      width: 50px;
+      height: 50px;
       padding: 10px;
     }
 
