--- a/src/stylesheets/components/_characterList.scss
+++ b/src/stylesheets/components/_characterList.scss
@@ -4,6 +4,8 @@
   grid-template-columns: 1fr;
   grid-template-rows: 400px 400px 400px 400px 400px 400px 400px 400px 400px 400px 400px;
   list-style-type: none;
+  margin-top: 60px;
+
 
   @include forTablet {
     grid-template-columns: 1fr 1fr;
