--- a/src/stylesheets/components/_filterSearch.scss
+++ b/src/stylesheets/components/_filterSearch.scss
@@ -2,34 +2,75 @@
   text-align: center;
   margin-top: 40px;
   padding-top: 20px;
-  font-size: 24px;
+  font-size: 34px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: $mainFont;
 
   @include forTablet {
     margin-top: 50px;
-    font-size: 30px;
+    font-size: 50px;
   }
   @include forPc {
     margin-top: 60px;
-    font-size: 40px;
+    font-size: 60px;
   }
 
   & input {
-    font-size: 20px;
-    margin-top: 20px;
-    margin-bottom: 30px;
-    max-width: 50vw;
+    font-size: 24px;
+    margin-top: 16px;
+    margin-bottom: 10px;
+    max-width: 60vw;
     background-color: black;
     color: white;
     padding-left: 15px;
+    height: 36px;
 
     @include forTablet {
-      font-size: 26px;
+      font-size: 30px;
+      height: 50px;
+      max-width: 50vw;
     }
     @include forPc {
+      font-size: 36px;
+      height: 60px;
+      max-width: 60vw;
+    }
+  }
+
+  & .removeButton {
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    background-color: #86c345;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius: 30px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    cursor: pointer;
+    transition: 800ms ease all;
+    text-shadow: 2px 2px 4px #000000;
+    font-family: $mainFont;
+    margin-left: 20px;
+
+    &:hover {
+      background: #2fb0c9;
+      color: #fff;
+    }
+
+    @include forTablet {
       font-size: 30px;
+    }
+
+    @include forPc {
+      font-size: 30px;
+      padding-top: 15px;
+      padding-bottom: 8px;
+      padding-left: 20px;
+      padding-right: 20px;
     }
   }
 }
