--- a/src/stylesheets/components/_header.scss
+++ b/src/stylesheets/components/_header.scss
@@ -1,39 +1,49 @@
 .header-container {
   height: 100vh;
-  width: 100vw;
   color: white;
   text-align: center;
+  cursor: url(../../images/cursor.cur), auto;
 
   & h1 {
-    padding-top: 120px;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 24px;
+    padding-top: 100px;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 34px;
+    font-family: $mainFont;
 
     @include forTablet {
-      font-size: 28px;
+      padding-top: 150px;
+      margin-left: 30px;
+      margin-right: 30px;
+      font-size: 60px;
     }
 
     @include forPc {
-      font-size: 40px;
+      font-size: 80px;
+      padding-top: 40px;
     }
   }
 
   & img {
-    margin-top: 20px;
     width: 180px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 
     @include forTablet {
-      width: 300px;
+      width: 400px;
     }
 
     @include forPc {
       width: 500px;
+      margin-top: -20px;
     }
   }
 
   .goLink-container {
-    margin-top: 40px;
+    margin-top: 60px;
+    position: relative;
+    z-index: 99;
 
     & .goLink {
       text-align: center;
@@ -44,15 +54,24 @@
       padding-left: 20px;
       padding-right: 20px;
       border-radius: 30px;
-      padding-top: 8px;
+      padding-top: 15px;
       padding-bottom: 8px;
+      cursor: pointer;
+      transition: 800ms ease all;
+      text-shadow: 2px 2px 4px #000000;
+      font-family: $mainFont;
+
+      &:hover {
+        background: #2fb0c9;
+        color: #fff;
+      }
 
       @include forTablet {
-        font-size: 30px;
+        font-size: 50px;
       }
 
       @include forPc {
-        font-size: 40px;
+        font-size: 50px;
       }
     }
   }
