--- a/src/stylesheets/components/_characterCard.scss
+++ b/src/stylesheets/components/_characterCard.scss
@@ -6,6 +6,7 @@
   padding: 10px;
   background-color: #86c345;
   font-family: $mainFont;
+  margin-bottom: 80px;
   box-shadow: rgba(black, 0.66) 0 30px 60px 0, inset #333 0 0 0 5px,
     inset rgba(white, 0.5) 0 0 0 6px;
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
