--- a/src/stylesheets/components/_header.scss
+++ b/src/stylesheets/components/_header.scss
@@ -12,14 +12,14 @@
     font-family: $mainFont;
 
     @include forTablet {
-      padding-top: 150px;
+      padding-top: 90px;
       margin-left: 30px;
       margin-right: 30px;
-      font-size: 60px;
+      font-size: 54px;
     }
 
     @include forPc {
-      font-size: 80px;
+      font-size: 68px;
       padding-top: 40px;
     }
   }
@@ -35,8 +35,12 @@
     }
 
     @include forPc {
-      width: 500px;
+      width: 400px;
       margin-top: -20px;
+      position: relative;
+      z-index: 99;
+      
+      
     }
   }
 
