--- a/src/stylesheets/components/_header.scss
+++ b/src/stylesheets/components/_header.scss
@@ -4,82 +4,89 @@
   text-align: center;
   cursor: url(../../images/cursor.cur), auto;
 
-  & h1 {
-    padding-top: 100px;
-    margin-left: 10px;
-    margin-right: 10px;
-    font-size: 34px;
-    font-family: $mainFont;
+  & .logo-container {
+    position: absolute;
+    top:0px;
+    right: 0;
+    left: 0;
 
-    @include forTablet {
-      padding-top: 90px;
-      margin-left: 30px;
-      margin-right: 30px;
-      font-size: 54px;
-    }
-
-    @include forPc {
-      font-size: 68px;
-      padding-top: 40px;
-    }
-  }
-
-  & img {
-    width: 180px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-
-    @include forTablet {
-      width: 400px;
-    }
-
-    @include forPc {
-      width: 400px;
-      margin-top: -20px;
+    & h1 {
+      padding-top: 100px;
+      margin-left: 10px;
+      margin-right: 10px;
+      font-size: 34px;
+      font-family: $mainFont;
       position: relative;
       z-index: 99;
-      
-      
-    }
-  }
-
-  .goLink-container {
-    margin-top: 60px;
-    position: relative;
-    z-index: 99;
-
-    & .goLink {
-      text-align: center;
-      color: white;
-      text-decoration: none;
-      font-size: 24px;
-      background-color: #86c345;
-      padding-left: 20px;
-      padding-right: 20px;
-      border-radius: 30px;
-      padding-top: 15px;
-      padding-bottom: 8px;
-      cursor: pointer;
-      transition: 800ms ease all;
-      text-shadow: 2px 2px 4px #000000;
-      font-family: $mainFont;
-
-      &:hover {
-        background: #2fb0c9;
-        color: #fff;
-      }
 
       @include forTablet {
-        font-size: 50px;
-        position: relative;
-        z-index: 99;
+        padding-top: 90px;
+        margin-left: 30px;
+        margin-right: 30px;
+        font-size: 54px;
       }
 
       @include forPc {
-        font-size: 50px;
+        font-size: 68px;
+        padding-top: 40px;
+      }
+    }
+
+    & img {
+      width: 180px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+
+      @include forTablet {
+        width: 400px;
+      }
+
+      @include forPc {
+        width: 400px;
+        margin-top: -20px;
         position: relative;
         z-index: 99;
+      }
+    }
+
+    .goLink-container {
+      margin-top: 60px;
+      position: relative;
+      z-index: 99;
+
+      & .goLink {
+        text-align: center;
+        color: white;
+        text-decoration: none;
+        font-size: 24px;
+        background-color: #86c345;
+        padding-left: 20px;
+        padding-right: 20px;
+        border-radius: 30px;
+        padding-top: 15px;
+        padding-bottom: 8px;
+        cursor: pointer;
+        transition: 800ms ease all;
+        text-shadow: 2px 2px 4px #000000;
+        font-family: $mainFont;
+
+        &:hover {
+          background: #2fb0c9;
+          color: #fff;
+        }
+
+        @include forTablet {
+          font-size: 50px;
+          position: relative;
+          z-index: 99;
+        }
+
+        @include forPc {
+          font-size: 50px;
+          position: relative;
+          z-index: 99;
+        }
       }
     }
   }
